--- a/package.json
+++ b/package.json
@@ -25,18 +25,30 @@
     "qwik": "qwik"
   },
   "devDependencies": {
+    "@auth/core": "^0.13.0",
+    "@biomejs/biome": "1.5.2",
     "@builder.io/qwik": "^1.4.0",
+    "@builder.io/qwik-auth": "0.1.1",
     "@builder.io/qwik-city": "^1.4.0",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20.11.0",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.56.0",
     "eslint-plugin-qwik": "^1.4.0",
+    "postcss": "^8.4.31",
     "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "tailwindcss": "3.3.3",
     "typescript": "5.3.3",
     "undici": "*",
     "vite": "^5.0.11",
     "vite-tsconfig-paths": "^4.2.1"
+  },
+  "dependencies": {
+    "@xata.io/client": "^0.28.3",
+    "nodemailer": "^6.9.8",
+    "sharp": "^0.33.2"
   }
 }
