--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
+    "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
-    "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
+    "deploy": "vercel deploy",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
@@ -27,9 +28,9 @@
   "devDependencies": {
     "@auth/core": "^0.13.0",
     "@biomejs/biome": "1.5.2",
-    "@builder.io/qwik": "^1.4.0",
-    "@builder.io/qwik-auth": "0.1.1",
-    "@builder.io/qwik-city": "^1.4.0",
+    "@builder.io/qwik": "^1.4.3",
+    "@builder.io/qwik-auth": "0.1.3",
+    "@builder.io/qwik-city": "^1.4.3",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20.11.0",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
@@ -43,6 +44,7 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.3.3",
     "undici": "*",
+    "vercel": "^29.1.1",
     "vite": "^5.0.11",
     "vite-tsconfig-paths": "^4.2.1"
   },
