--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
       "npx @biomejs/biome lint",
       "eslint --max-warnings 0 ."
     ]
-},
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -57,6 +57,7 @@
     "postcss": "^8.4.31",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.4",
+    "semantic-release": "^23.0.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.3.3",
     "undici": "*",
