--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
     }
   },
   "files": ["./.eslintrc.cjs"],
-  "include": ["src", "./*.d.ts", "./*.config.ts", "tailwind.config.js"]
+  "include": ["src", "./*.d.ts", "./*.config.ts", "release.config.js", "tailwind.config.js"]
 }
