ci: 🔧 markdown lint added
BREAKING CHANGE:
testing release 6

--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
       "npx @biomejs/biome format --write",
       "npx @biomejs/biome lint",
       "eslint --max-warnings 0 ."
-    ]
+    ],
+    "*.md": [
+        "markdownlint --fix",
+        "git add"
+      ]
   },
   "husky": {
     "hooks": {
