--- a/package.json
+++ b/package.json
@@ -34,9 +34,8 @@
       "eslint --max-warnings 0 ."
     ],
     "*.md": [
-        "markdownlint --fix",
-        "git add"
-      ]
+      "markdownlint --fix"
+    ]
   },
   "husky": {
     "hooks": {
@@ -70,6 +69,7 @@
     "vite-tsconfig-paths": "^4.2.1"
   },
   "dependencies": {
+    "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@xata.io/client": "^0.28.3",
     "nodemailer": "^6.9.8",
