--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-qwik": "^1.4.0",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.2",
+    "markdownlint-cli": "^0.39.0",
     "postcss": "^8.4.31",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.4",
