--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,10 @@ on:
 
 jobs:
   release:
+    permissions:
+      contents: write
+      issues: write
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
       - name: 'Generate token'
@@ -32,4 +36,4 @@ jobs:
       - name: 'Releasing via Semantic Release'
         run: npx semantic-release
         env:
-          GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
