--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@typescript-eslint/parser": "^6.18.1",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-qwik": "^1.4.0",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.2",
