feat(cd): 🔧 add cloud run github action

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,7 @@
 		"src",
 		"./*.d.ts",
 		"./*.config.ts",
-		"tailwind.config.js"
+		"tailwind.config.js",
+		"adapters/*/vite.config.ts"
 	]
 }
