fix(cd): 🐛 add role to cloud run service account

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,5 @@
 name: Release
-run-name: ${{ github.actor }} is automatically releasing 🚀
+run-name: ${{ github.actor }} is cutting a release 🔖
 
 on:
   workflow_dispatch:
