--- a/.github/workflows/google-cloudrun-source.yml
+++ b/.github/workflows/google-cloudrun-source.yml
@@ -45,6 +45,7 @@
 #   Principle of least privilege        - https://cloud.google.com/blog/products/identity-security/dont-get-pwned-practicing-the-principle-of-least-privilege
 
 name: Deploy to Cloud Run from Source
+run-name: ${{ github.actor }} is deploying 🚀
 
 on:
   workflow_dispatch:
@@ -67,8 +68,8 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: 'Checkout'
+        uses: actions/checkout@v3
 
       - name: 'Setting up Node'
         uses: actions/setup-node@v3
@@ -80,6 +81,7 @@ jobs:
 
       - name: 'Verifying the signatures'
         run: npm audit signatures
+
       - name: 'Running Production Build'
         run: npm run build
 
@@ -93,13 +95,13 @@ jobs:
       # NOTE: Alternative option - authentication via credentials json
       - name: Google Auth
         id: auth
-        uses: 'google-github-actions/auth@v0'
+        uses: google-github-actions/auth@v2
         with:
           credentials_json: '${{ secrets.SA_CREDS }}'
 
       - name: Deploy to Cloud Run
         id: deploy
-        uses: google-github-actions/deploy-cloudrun@v0
+        uses: google-github-actions/deploy-cloudrun@v2
         with:
         #   metadata: ./cloudrun/my-cloudrun-service.yaml
           project_id: ${{ env.PROJECT_ID }}
