--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.server": "vite build -c adapters/cloud-run/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
-    "deploy": "gcloud run deploy my-cloud-run-app --source .",
+    "deploy": "gcloud run deploy qwik-blog-service --source .",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
