--- a/.github/workflows/google-cloudrun-source.yml
+++ b/.github/workflows/google-cloudrun-source.yml
@@ -103,12 +103,12 @@ jobs:
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v2
         with:
-        #   metadata: ./cloudrun/my-cloudrun-service.yaml
-          project_id: ${{ env.PROJECT_ID }}
-          service: ${{ env.SERVICE }}
-          region: ${{ env.REGION }}
+          metadata: ./cloudrun/my-cloudrun-service.yaml
+        #   project_id: ${{ env.PROJECT_ID }}
+        #   service: ${{ env.SERVICE }}
+        #   region: ${{ env.REGION }}
           # NOTE: If required, update to the appropriate source folder
-          source: ./
+        #   source: ./
 
       # If required, use the Cloud Run url output in later steps
       - name: Show Output
