--- a/.github/workflows/google-cloudrun-source.yml
+++ b/.github/workflows/google-cloudrun-source.yml
@@ -104,7 +104,7 @@ jobs:
     #     run: |-
     #       export IMAGE="${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
     #       export SERVICE="${{ env.SERVICE }}"
-    #       envsubst < ./workflows/deploy-cloudrun/service.template.yaml > service.yaml
+    #       envsubst < ./cloudrun/service.template.yaml  > service.yaml
 
       # envsubst is replacing template variables and creating a YAML Service specification with the new image tag
       - name: Create Service declearation (Export Environment Variables)  
@@ -117,7 +117,7 @@ jobs:
           export GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}"
           export GOOGLE_CLIENT_SECRET="${{ secrets.GOOGLE_CLIENT_SECRET }}"
           export APPLE_SECRET="${{ secrets.APPLE_SECRET }}"
-          envsubst < ./workflows/deploy-cloudrun/service.template.yaml > service.yaml
+          envsubst < ./cloudrun/service.template.yaml > service.yaml
 
       # Deploy Cloud Run Service from the YAML Service specification
       - name: Deploy to Cloud Run
