--- a/.github/workflows/google-cloudrun-source.yml
+++ b/.github/workflows/google-cloudrun-source.yml
@@ -104,7 +104,7 @@ jobs:
     #     run: |-
     #       export IMAGE="${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
     #       export SERVICE="${{ env.SERVICE }}"
-    #       envsubst < ./cloudrun/service.template.yaml  > service.yaml
+    #       envsubst < ./cloudrun/service.template.yaml > service.yaml
 
       # envsubst is replacing template variables and creating a YAML Service specification with the new image tag
       - name: Create Service declearation (Export Environment Variables)  
@@ -124,7 +124,7 @@ jobs:
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v2
         with:
-          service: ${{ env.SERVICE }}
+          source: ./
           region: ${{ env.REGION }}
           metadata: service.yaml
 
