--- a/.github/workflows/google-cloudrun-source.yml
+++ b/.github/workflows/google-cloudrun-source.yml
@@ -102,6 +102,7 @@ jobs:
     #   # envsubst is replacing template variables and creating a YAML Service specification with the new image tag
     #   - name: Create Service declearation   
     #     run: |-
+    #       export IMAGE="gcr.io/${{env.PROJECT_ID}}/${{env.SERVICE}}"
     #       export IMAGE="${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
     #       export SERVICE="${{ env.SERVICE }}"
     #       envsubst < ./cloudrun/service.template.yaml > service.yaml
@@ -109,7 +110,6 @@ jobs:
       # envsubst is replacing template variables and creating a YAML Service specification with the new image tag
       - name: Create Service declearation (Export Environment Variables)  
         run: |-
-          export IMAGE="gcr.io/${{env.PROJECT_ID}}/${{env.SERVICE}}"
           export SERVICE="${{ env.SERVICE }}"
           export XATA_API_KEY="${{ secrets.XATA_API_KEY }}"
           export XATA_BRANCH="${{ secrets.XATA_BRANCH }}"
