--- a/.github/workflows/init-cloudrun.yml
+++ b/.github/workflows/init-cloudrun.yml
@@ -44,8 +44,8 @@
 #   Cloud Run builds from source        - https://cloud.google.com/run/docs/deploying-source-code
 #   Principle of least privilege        - https://cloud.google.com/blog/products/identity-security/dont-get-pwned-practicing-the-principle-of-least-privilege
 
-name: Deploy to Cloud Run from Source
-run-name: ${{ github.actor }} is deploying 🚀
+name: Initialize Cloud Run from Source
+run-name: ${{ github.actor }} is initializing a Cloud Run service
 
 on:
   workflow_dispatch:
@@ -60,7 +60,7 @@ env:
   REGION: us-central1 # TODO: update Cloud Run service region
 
 jobs:
-  deploy:
+  initialize:
     # Add 'id-token' with the intended permissions for workload identity federation
     permissions:
       contents: 'read'
@@ -108,36 +108,38 @@ jobs:
     #       envsubst < ./cloudrun/service.template.yaml > service.yaml
 
       # envsubst is replacing template variables and creating a YAML Service specification with the new image tag
-      - name: Create Service declearation (Export Environment Variables)  
-        run: |-
-          export IMAGE="us-central1-docker.pkg.dev/arched-logic-390516/cloud-run-source-deploy/qwik-blog-service@sha256:ccb2bfe4eb251713505bfb8c29bdbf5dd2014f097b41240f2120cc57ef39d9b2"
-          export SERVICE="${{ env.SERVICE }}"
-          export XATA_API_KEY="${{ secrets.XATA_API_KEY }}"
-          export XATA_BRANCH="${{ secrets.XATA_BRANCH }}"
-          export AUTH_SECRET="${{ secrets.AUTH_SECRET }}"
-          export GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}"
-          export GOOGLE_CLIENT_SECRET="${{ secrets.GOOGLE_CLIENT_SECRET }}"
-          export APPLE_SECRET="${{ secrets.APPLE_SECRET }}"
-          envsubst < ./cloudrun/service.template.yaml > service.yaml
+    #   - name: Create Service declearation (Export Environment Variables)  
+    #     run: |-
+    #       export IMAGE="us-central1-docker.pkg.dev/arched-logic-390516/cloud-run-source-deploy/qwik-blog-service@sha256:ccb2bfe4eb251713505bfb8c29bdbf5dd2014f097b41240f2120cc57ef39d9b2"
+    #       export SERVICE="${{ env.SERVICE }}"
+    #       export XATA_API_KEY="${{ secrets.XATA_API_KEY }}"
+    #       export XATA_BRANCH="${{ secrets.XATA_BRANCH }}"
+    #       export AUTH_SECRET="${{ secrets.AUTH_SECRET }}"
+    #       export GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}"
+    #       export GOOGLE_CLIENT_SECRET="${{ secrets.GOOGLE_CLIENT_SECRET }}"
+    #       export APPLE_SECRET="${{ secrets.APPLE_SECRET }}"
+    #       envsubst < ./cloudrun/service.template.yaml > service.yaml
 
       # Deploy Cloud Run Service from the YAML Service specification
-      - name: Deploy to Cloud Run
-        id: deploy
-        uses: google-github-actions/deploy-cloudrun@v2
-        with:
-          region: ${{ env.REGION }}
-          metadata: service.yaml
-
     #   - name: Deploy to Cloud Run
     #     id: deploy
     #     uses: google-github-actions/deploy-cloudrun@v2
     #     with:
-    #       metadata: ./cloudrun/service.template.yaml
-        #   project_id: ${{ env.PROJECT_ID }}
-        #   service: ${{ env.SERVICE }}
-        #   region: ${{ env.REGION }}
-          # NOTE: If required, update to the appropriate source folder
-        #   source: ./
+    #       region: ${{ env.REGION }}
+    #       metadata: service.yaml
+
+      - name: Deploy to Cloud Run
+        id: deploy
+        uses: google-github-actions/deploy-cloudrun@v2
+        with:
+          project_id: ${{ env.PROJECT_ID }}
+          service: ${{ env.SERVICE }}
+          region: ${{ env.REGION }}
+        #   NOTE: If required, update to the appropriate source folder
+          source: ./
+          env_vars: |
+            FOO=bar
+            ZIP=zap
 
       # If required, use the Cloud Run url output in later steps
       - name: Show Output
