feat(cd): 👷 add cloud build configurations to google cloud service

--- a/.github/workflows/google-cloudrun-source.yml
+++ b/.github/workflows/google-cloudrun-source.yml
@@ -56,7 +56,7 @@ on:
 
 env:
   PROJECT_ID: arched-logic-390516 # TODO: update Google Cloud project id
-  SERVICE: qwik-blog-service # TODO: update Cloud Run service name
+  SERVICE: qwik-blog-service01 # TODO: update Cloud Run service name
   REGION: us-central1 # TODO: update Cloud Run service region
 
 jobs:
@@ -110,8 +110,9 @@ jobs:
       # envsubst is replacing template variables and creating a YAML Service specification with the new image tag
       - name: Create Service declearation (Export Environment Variables)  
         run: |-
-          export IMAGE="us-central1-docker.pkg.dev/arched-logic-390516/cloud-run-source-deploy/qwik-blog-service@sha256:ccb2bfe4eb251713505bfb8c29bdbf5dd2014f097b41240f2120cc57ef39d9b2"
+          export SOURCE_URL="https://github.com/TeddTech/qwik-blog.git"
           export SERVICE="${{ env.SERVICE }}"
+          export PROJECT_ID="${{ env.PROJECT_ID }}"
           export XATA_API_KEY="${{ secrets.XATA_API_KEY }}"
           export XATA_BRANCH="${{ secrets.XATA_BRANCH }}"
           export AUTH_SECRET="${{ secrets.AUTH_SECRET }}"
