--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
+    "build.server": "if [ $ENV = 'prod' ]; then vite build -c adapters/cloud-run/vite.config.ts; else vite build -c adapters/vercel-edge/vite.config.ts; fi",
     "build.types": "tsc --incremental --noEmit",
-    "deploy": "vercel deploy",
+    "deploy": "if [ $ENV = 'prod' ]; then gcloud run deploy $PROJECT_ID --source .; else vercel deploy; fi",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
