--- a/.github/workflows/cloudrun-source.yml
+++ b/.github/workflows/cloudrun-source.yml
@@ -57,7 +57,7 @@ on:
 env:
   ENV: 'prod'
   PROJECT_ID: arched-logic-390516 # TODO: update Google Cloud project id
-  SERVICE: qwik-blog-service1 # TODO: update Cloud Run service name
+  SERVICE: qwik-blog-service # TODO: update Cloud Run service name
   REGION: us-central1 # TODO: update Cloud Run service region
 
 jobs:
