--- a/.github/workflows/cloudrun-source.yml
+++ b/.github/workflows/cloudrun-source.yml
@@ -143,12 +143,12 @@ jobs:
           no_traffic: true
           flags: '--allow-unauthenticated'
           env_vars: |
-            XATA_API_KEY="${{ secrets.XATA_API_KEY }}"
-            XATA_BRANCH="${{ secrets.XATA_BRANCH }}"
-            AUTH_SECRET="${{ secrets.AUTH_SECRET }}"
-            GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}"
-            GOOGLE_CLIENT_SECRET="${{ secrets.GOOGLE_CLIENT_SECRET }}"
-            APPLE_SECRET="${{ secrets.APPLE_SECRET }}"
+            XATA_API_KEY=${{ secrets.XATA_API_KEY }}
+            XATA_BRANCH=${{ secrets.XATA_BRANCH }}
+            AUTH_SECRET=${{ secrets.AUTH_SECRET }}
+            GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
+            GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
+            APPLE_SECRET=${{ secrets.APPLE_SECRET }}
 
       # If required, use the Cloud Run url output in later steps
       - name: Show Output Deployment Output
