--- a/.github/workflows/cloudrun-docker.yml
+++ b/.github/workflows/cloudrun-docker.yml
@@ -1,16 +1,18 @@
-# This workflow will deploy source code on Cloud Run when a commit is pushed to the "main" branch
+# This workflow build and push a Docker container to Google Artifact Registry and deploy it on Cloud Run when a commit is pushed to the $default-branch branch
 #
 # Overview:
 #
 # 1. Authenticate to Google Cloud
-# 2. Deploy it to Cloud Run
+# 2. Authenticate Docker to Artifact Registry
+# 3. Build a docker container
+# 4. Publish it to Google Artifact Registry
+# 5. Deploy it to Cloud Run
 #
 # To configure this workflow:
 #
 # 1. Ensure the required Google Cloud APIs are enabled:
 #
 #    Cloud Run            run.googleapis.com
-#    Cloud Build          cloudbuild.googleapis.com
 #    Artifact Registry    artifactregistry.googleapis.com
 #
 # 2. Create and configure Workload Identity Federation for GitHub (https://github.com/google-github-actions/auth#setting-up-workload-identity-federation)
@@ -21,11 +23,8 @@
 #      roles/run.admin
 #      roles/iam.serviceAccountUser     (to act as the Cloud Run runtime service account)
 #
-#    Cloud Build
-#      roles/cloudbuild.builds.editor
-#
 #    Cloud Storage
-#      roles/storage.objectAdmin
+#      roles/storage.admin   (if using Google Container Registry (gcr) instead)
 #
 #    Artifact Registry
 #      roles/artifactregistry.admin     (project or repository level)
@@ -34,17 +33,19 @@
 #
 # 4. Create GitHub secrets for WIF_PROVIDER and WIF_SERVICE_ACCOUNT
 #
-# 5. Change the values for the SERVICE and REGION environment variables (below).
+# 5. Change the values for the GAR_LOCATION, SERVICE and REGION environment variables (below).
+#
+# NOTE: To use Google Container Registry instead, replace ${{ env.GAR_LOCATION }}-docker.pkg.dev with gcr.io
 #
 # For more support on how to run this workflow, please visit https://github.com/marketplace/actions/deploy-to-cloud-run
 #
 # Further reading:
-#   Cloud Run runtime service account   - https://cloud.google.com/run/docs/securing/service-identity
-#   Cloud Run IAM permissions           - https://cloud.google.com/run/docs/deploying-source-code#permissions_required_to_deploy
-#   Cloud Run builds from source        - https://cloud.google.com/run/docs/deploying-source-code
-#   Principle of least privilege        - https://cloud.google.com/blog/products/identity-security/dont-get-pwned-practicing-the-principle-of-least-privilege
+#   Cloud Run IAM permissions                 - https://cloud.google.com/run/docs/deploying
+#   Artifact Registry IAM permissions         - https://cloud.google.com/artifact-registry/docs/access-control#roles
+#   Container Registry vs Artifact Registry   - https://cloud.google.com/blog/products/application-development/understanding-artifact-registry-vs-container-registry
+#   Principle of least privilege              - https://cloud.google.com/blog/products/identity-security/dont-get-pwned-practicing-the-principle-of-least-privilege
 
-name: Deploy to Cloud Run from Docker Image
+name: Build Docker Image and Deploy to Cloud Run
 run-name: ${{ github.actor }} is deploying a Cloud Run service from Docker Image 🚀
 
 on:
@@ -52,11 +53,14 @@ on:
 
 # on:
 #   push:
-#     branches: [ "main" ]
+#     branches:
+#       - 'prod'
 
 env:
   ENV: 'prod'
   PROJECT_ID: arched-logic-390516 # TODO: update Google Cloud project id
+  GAR_LOCATION: YOUR_GAR_LOCATION # TODO: update Artifact Registry location
+  REPOSITORY: YOUR_REPOSITORY_NAME # TODO: update Artifact Registry repository name
   SERVICE: qwik-blog-service01 # TODO: update Cloud Run service name
   REGION: us-central1 # TODO: update Cloud Run service region
 
@@ -69,7 +73,7 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-      - name: 'Checkout'
+      - name: Checkout
         uses: actions/checkout@v3
 
       - name: 'Setting up Node'
@@ -80,37 +84,52 @@ jobs:
       - name: 'Installing dependencies'
         run: npm ci
 
-    #   - name: 'Verifying the signatures'
-    #     run: npm audit signatures
+      - name: 'Verifying the signatures'
+        run: npm audit signatures
 
       - name: 'Running Production Build'
         run: npm run build
 
-    #   - name: Google Auth
-    #     id: auth
-    #     uses: 'google-github-actions/auth@v0'
-    #     with:
-    #       workload_identity_provider: '${{ secrets.WIF_PROVIDER }}' # e.g. - projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider
-    #       service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}' # e.g. - my-service-account@my-project.iam.gserviceaccount.com
-
-      # NOTE: Alternative option - authentication via credentials json
       - name: Google Auth
         id: auth
-        uses: google-github-actions/auth@v2
+        uses: 'google-github-actions/auth@v0'
         with:
-          credentials_json: '${{ secrets.SA_CREDS }}'
+          token_format: 'access_token'
+          workload_identity_provider: '${{ secrets.WIF_PROVIDER }}' # e.g. - projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider
+          service_account: '${{ secrets.WIF_SERVICE_ACCOUNT_EMAIL }}' # e.g. - my-service-account@my-project.iam.gserviceaccount.com
 
-    #   # envsubst is replacing template variables and creating a YAML Service specification with the new image tag
-    #   - name: Create Service declearation   
-    #     run: |-
-    #       export IMAGE="gcr.io/${{env.PROJECT_ID}}/${{env.SERVICE}}"
-    #       export IMAGE="${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
-    #       export SERVICE="${{ env.SERVICE }}"
-    #       envsubst < ./cloudrun/service.template.yaml > service.yaml
+      # BEGIN - Docker auth and build (NOTE: If you already have a container image, these Docker steps can be omitted)
+
+      # Authenticate Docker to Google Cloud Artifact Registry
+      - name: Docker Auth
+        id: docker-auth
+        uses: 'docker/login-action@v1'
+        with:
+          username: 'oauth2accesstoken'
+          password: '${{ steps.auth.outputs.access_token }}'
+          registry: '${{ env.GAR_LOCATION }}-docker.pkg.dev'
+          
+      # NOTE: Alternative option - authentication via credentials json
+      # - name: Docker Auth
+      # id: docker-auth
+      # uses: 'docker/login-action@v1'
+      # with:
+      #   registry: ${{ env.GAR_LOCATION }}-docker.pkg.dev
+      #   username: _json_key
+      #   password: ${{ secrets.GCP_CREDENTIALS }}
+
+      - name: Build and Push Container
+        run: |-
+          docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}" ./
+          docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}"
+
+      # END - Docker auth and build
 
       # envsubst is replacing template variables and creating a YAML Service specification with the new image tag
       - name: Create Service declearation (Export Environment Variables)  
         run: |-
+          export IMAGE="${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}"
+          export IMAGE="${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
           export SERVICE="${{ env.SERVICE }}"
           export XATA_API_KEY="${{ secrets.XATA_API_KEY }}"
           export XATA_BRANCH="${{ secrets.XATA_BRANCH }}"
@@ -118,15 +137,15 @@ jobs:
           export GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}"
           export GOOGLE_CLIENT_SECRET="${{ secrets.GOOGLE_CLIENT_SECRET }}"
           export APPLE_SECRET="${{ secrets.APPLE_SECRET }}"
+          export TOKEN_EXPIRE=6400
           envsubst < ./cloudrun/service.template.yaml > service.yaml
 
-      # Deploy Cloud Run Service from the YAML Service specification
       - name: Deploy to Cloud Run
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v2
         with:
-          region: ${{ env.REGION }}
           metadata: service.yaml
+          region: ${{ env.REGION }}
 
       # If required, use the Cloud Run url output in later steps
       - name: Show Output
